syntax = "proto3";

option csharp_namespace = "RateLimiter.Grpc";

package ratelimiter;

service RateLimiter {
  rpc Check (RateLimitRequest) returns (RateLimitResponse);
}

message RateLimitRequest {
  string subject = 1;
  string resource = 2;
  int32 cost = 3;
}

message RateLimitResponse {
  bool allowed = 1;
  string policy_id = 2;
  double remaining_tokens = 3;
  int64 retry_after_seconds = 4;
}
